Refactor messages.properties

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,3 +1,6 @@
+# general
+general.id.positive=ID must be a positive number
+
 # user info
 
 email.notnull=Email must be not null.
@@ -25,8 +28,8 @@ genre.name.invalid=Genre name must contain only lowercase Latin letters and be s
 # book info
 
 isbn.notnull=ISBN must be not null.
-isbn.length=ISBN must be between 10 and 13 characters long.
-isbn.invalid=ISBN must be either 10 or 13 digits long.
+isbn.length=ISBN must be exactly 13 characters long, including dashes.
+isbn.invalid=ISBN must be a 10-digit number with the format X-XXX-XXXXX-X.
 
 title.notnull=Title must not be null.
 title.length=Title must be between 1 and 255 characters long.
@@ -36,11 +39,13 @@ description.length=Description must not exceed 1000 characters.
 genreIds.notnull=The genre IDs list must be not null.
 genreIds.notempty=The genre IDs list must not be empty.
 genreIds.size=The genre IDs list must contain at least one element.
+genreIds.positive=Each genre ID must be a positive number.
+
 
 authorIds.notnull=The author IDs list must be not null.
 authorIds.notempty=The author IDs list must not be empty.
 authorIds.size=The author IDs list must contain at least one element.
-
+authorIds.positive=Each author ID must be a positive number.
 
 # book loan info
 
